# SPOVM_labs

./: README.md  groups  headers.h  main.cpp  project.config  qq
lab1/: Makefile  mainLinux.cpp  mainWin.cpp  shmemory.cpp  shmemory.h  sortWin.cpp
lab2/: CMakeLists.txt  ChildMake  MainMake  main.cpp  mainprog.cpp  printpidprog.cpp  processinfo.cpp  processinfo.h  processmanager.cpp  processmanager.h
lab2_final/: printpidprog.cpp  processinfo.h  processmanager.cpp
lab3/: CMakeLists.txt  client.cpp  semaphore.cpp  semaphore.h  server.cpp  shmemory.cpp
lab4/: CMakeLists.txt  Client.pro  client.cpp  semaphore.cpp  server.cpp  serverftp.cpp  serverftp.h  shmemory.cpp  shmemory.h  thread.cpp  thread.h
lab5/: CMakeLists.txt  Create_thread.cpp  Create_thread.h  Makefile  async_lin.c  async_win.c  async_win.h  fqueue.h  fqueue_lin.c  fqueue_win.c  libraries.h  main.c  main.cpp  options.h  thread.h  thread_lin.c  thread_win.c  tstruct.h
lab6/: main.cpp  memblock.hpp  mempage.hpp  stupidptr.hpp
lab7/: libraries.h  main.cpp  virtualItem.cpp  virtualItem.h
